--- a/LeafTech/Inventory Manager/nbproject/private/private.properties
+++ b/LeafTech/Inventory Manager/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
+file.reference.mysql-connector-java-5.1.29-bin.jar=C:\\Users\\kosty_000\\Documents\\CMU\\2nd Semester\\S14-Architectures for Software Systems\\A2-2014\\GitHub\\A2-2014 Source\\A2-2014 Source\\A2\\LeafTech\\Inventory Manager\\dist\\lib\\mysql-connector-java-5.1.28-bin.jar
 jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Users\\yingda\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\kosty_000\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
