--- a/User/nbproject/private/private.properties
+++ b/User/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mysql-connector-java-5.1.29-bin.jar=C:\\Program Files\\Java\\jre7\\lib\\mysql-connector-java-5.1.29-bin.jar
+file.reference.mysql-connector-java-5.1.29-bin.jar=C:\\Users\\kosty_000\\Documents\\CMU\\2nd Semester\\S14-Architectures for Software Systems\\A2-2014\\GitHub\\A2-2014 Source\\A2-2014 Source\\A2\\LeafTech\\Inventory Manager\\dist\\lib\\mysql-connector-java-5.1.28-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\yingda\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\kosty_000\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
