--- a/EEPs/OrderApp/nbproject/project.properties
+++ b/EEPs/OrderApp/nbproject/project.properties
@@ -19,13 +19,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/OrderApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.11-bin.jar=C:\\Program Files\\Java\\mysql-connector-java-5.1.11\\mysql-connector-java-5.1.11-bin.jar
-file.reference.mysql-connector-java-5.1.29-bin.jar=C:\\Program Files\\Java\\jre7\\lib\\mysql-connector-java-5.1.29-bin.jar
+file.reference.mysql-connector-java-5.1.28-bin.jar=..\\InventoryMgr\\dist\\lib\\mysql-connector-java-5.1.28-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.11-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.29-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.28-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
