--- a/EEPs/OrderApp/nbproject/private/private.properties
+++ b/EEPs/OrderApp/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
+file.reference.mysql-connector-java-5.1.28-bin.jar=C:\\Program Files\\Java\\jre7\\lib\\mysql-connector-java-5.1.28-bin.jar
 jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Users\\kosty_000\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Yury\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
